force-app/main/default/objects/Holders_Required_Component__c/Holders_Required_Component__c.object-meta.xml
<CustomObject>
    <label>Holders Required Component</label>
    <nameField>
        <displayFormat>HRC# {0000000}</displayFormat>
        <label>Holders Required Component #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Holder Required Components</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>