force-app/main/default/objects/Holders_Required_Component__c/fields/Gasket__c.field-meta.xml
<CustomField>
    <fullName>Gasket__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gasket</label>
    <type>Checkbox</type>
</CustomField>