force-app/main/default/objects/Holders_Required_Component__c/fields/Inlet__c.field-meta.xml
<CustomField>
    <fullName>Inlet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inlet</label>
    <type>Checkbox</type>
</CustomField>