force-app/main/default/objects/Holders_Required_Component__c/fields/Jackscrews__c.field-meta.xml
<CustomField>
    <fullName>Jackscrews__c</fullName>
    <label>Jackscrews</label>
    <length>255</length>
    <type>Text</type>
</CustomField>