force-app/main/default/objects/Holders_Required_Component__c/fields/Nut__c.field-meta.xml
<CustomField>
    <fullName>Nut__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nut</label>
    <type>Checkbox</type>
</CustomField>