force-app/main/default/objects/Holders_Required_Component__c/fields/Spacer_Ring__c.field-meta.xml
<CustomField>
    <fullName>Spacer_Ring__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Spacer Ring</label>
    <type>Checkbox</type>
</CustomField>