force-app/main/default/objects/Holders_Required_Component__c/fields/Studs_and_Nuts__c.field-meta.xml
<CustomField>
    <fullName>Studs_and_Nuts__c</fullName>
    <label>Studs and Nuts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>