force-app/main/default/objects/Holders_Required_Component__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PTC__c</columns>
    <columns>Body__c</columns>
    <columns>Clamp__c</columns>
    <columns>Companion_Flange__c</columns>
    <columns>Holddown_Ring__c</columns>
    <columns>Gasket__c</columns>
    <columns>Inlet__c</columns>
    <columns>Jackscrews__c</columns>
    <columns>Nut__c</columns>
    <columns>Outlet__c</columns>
    <columns>Mid_Flange__c</columns>
    <columns>Studs_and_Nuts__c</columns>
    <columns>Spacer_Ring__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PTC__c</field>
        <operation>startsWith</operation>
        <value>css</value>
    </filters>
    <label>All</label>
</ListView>